@@ -27,6 +27,7 @@ public class ExampleDriver {
     ProgramDriver pgd = new ProgramDriver();
     try {
       pgd.addClass("pi", PiEstimator.class, "Pi Estimator");
+      pgd.addClass("test", SerializePrinting.class, "Serialize Printing Test");
       
       pgd.driver(args);
     } catch (Throwable e) {
